# riptide

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  create_report.py  mkdocs.yml  pyproject.toml  sample.env
docs/: comparing_models.md  error_types.md  gen_ref_pages.py  index.md  understanding_evaluations.md
docs/api/: confusions.md  errors.md  flow.md  inspector.md  object_detection.md  utils.md
docs/api/embeddings/: encoders.md  projector.md  transforms.md
docs/api/io/: loaders.md
docs/guides/: comparing_models.md  error_types.md
docs/guides/evaluation/: index.md  similarity.md
docs/overrides/: main.html
docs/quickstart/: index.md
docs/stylesheets/: examples.css  extra.css
docs/versions/: changelog.md  roadmap.md
riptide/: __init__.py  reports.py
riptide/core/: colors.py
riptide/detection/: __init__.py  characterization.py  confusions.py  errors.py  evaluation.py  inspection.py  visualization.py
riptide/detection/embeddings/: __init__.py  projector.py
riptide/detection/embeddings/mep/: encoders.py  transforms.py
riptide/flow/: __init__.py  gt_flow.py
riptide/io/: __init__.py  loaders.py
riptide/report/: section.py
riptide/utils/: colors.py  crops.py  enums.py  image.py  logging.py  models.py  obb.py  plots.py
static/: base.html  comparison.html  evaluation.html  section.html  style.css  template.html
tests/: test_crops.py  test_detection_evaluator.py  test_inspector.py  test_projector.py
tests/strategies/: image.py
tests/utils/: strategies.py
