[project]
name = "riptide"
version = "0.4.0"
description = "Bifrost Object Detection Evaluation Suite"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.40",
    "jinja2>=3.1.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "pydantic>=2.12.0",
    "scikit-learn>=1.7.2",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "ujson>=5.11.0",
]

[tool.setuptools]
packages = ["riptide"]

# This Torch install pattern comes from
# https://docs.astral.sh/uv/guides/integration/pytorch/#configuring-accelerators-with-optional-dependencies
[project.optional-dependencies]
cpu = [
    "torch>=2.7.1",
    "torchvision==0.22.1",
]
cu126 = [
    "torch>=2.7.1",
    "torchvision==0.22.1",
]
cu128 = [
    "torch>=2.7.0",
    "torchvision==0.22.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

#[dependency-groups]
#dev = [
#    "pytest~=5.2",
#    "isort>=5.10.1,<6",
#    "black>=22.3.0,<23",
#    "pre-commit>=2.17.0,<3",
#    "flake8>=4.0.1,<5",
#    "hypothesis[numpy]>=6.75.3,<7",
#]
#docs = [
#    "mkdocs-material>=9.1.14,<10",
#    "mkdocstrings[python]>=0.22.0,<0.23",
#    "mkdocs-gen-files>=0.5.0,<0.6",
#]

#[tool.uv]
#default-groups = [
#    "dev",
#    "docs",
#]

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
